After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781318 - Fix lua sources path with Meson
Fix lua sources path with Meson
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2017-04-14 14:26 UTC by Bastien Nocera
Modified: 2017-04-14 14:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
lua-factory: Better debug in get_lua_sources() (1.66 KB, patch)
2017-04-14 14:27 UTC, Bastien Nocera
committed Details | Review
lua-factory: Fix lua sources path with Meson (1.24 KB, patch)
2017-04-14 14:27 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2017-04-14 14:26:56 UTC
.
Comment 1 Bastien Nocera 2017-04-14 14:27:00 UTC
Created attachment 349868 [details] [review]
lua-factory: Better debug in get_lua_sources()

So we can know which directories it's trying to read sources from, and
whether it succeeded in opening those directories.
Comment 2 Bastien Nocera 2017-04-14 14:27:06 UTC
Created attachment 349869 [details] [review]
lua-factory: Fix lua sources path with Meson

lua-factory was trying to find lua sources in:
~/.local/share/share/grilo-plugins/grl-lua-factory
amongst other directories with duplicated "share" components.

luafactorydir is used to pass "LUA_FACTORY_SOURCE_LOCATION" as a define,
but it has a value of "grilo-plugins/${LUA_FACTORY_PLUGIN_ID}" when
using autotools, without a "datadir" component.
Comment 3 Bastien Nocera 2017-04-14 14:31:12 UTC
Attachment 349868 [details] pushed as c56808c - lua-factory: Better debug in get_lua_sources()
Attachment 349869 [details] pushed as 24e12ef - lua-factory: Fix lua sources path with Meson