lua-factory: Better debug in get_lua_sources()

So we can know which directories it's trying to read sources from, and
whether it succeeded in opening those directories.

https://bugzilla.gnome.org/show_bug.cgi?id=781318